<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_action_info"
            android:title="@string/info" />
        <item
            android:id="@+id/nav_tourism"
            android:icon="@drawable/ic_action_tourism"
            android:title="@string/tourism" />
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_action_shop"
            android:title="@string/shopping" />
        <item
            android:id="@+id/nav_sport"
            android:icon="@drawable/ic_action_sport"
            android:title="@string/sport" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_action_map"
            android:title="@string/map" />
    </group>


</menu>
